# flet-barcode-scanner

./: pyproject.toml
examples/flet_barcode_scanner_example/: pyproject.toml
src/flutter/flet_barcode_scanner/: pubspec.yaml
