[project]
name = "flet-barcode-scanner-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "MasterA5", email = "agustin090806090806@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "flet-barcode-scanner @ git+https://github.com/MasterA5/flet-barcode-scanner",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.MasterA5"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-barcode-scanner-example"

# company name to display in about app dialogs
company = "MasterA5"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MasterA5"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-barcode-scanner = "../.." # relative path

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.uv.sources]
flet-barcode-scanner = { path = "../../", editable = true }

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
flet-barcode-scanner = {path = "../../", develop = true}
